--- a/osa7/blogapp/frontend/package.json
+++ b/osa7/blogapp/frontend/package.json
@@ -16,6 +16,7 @@
     "jsdom": "^24.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.27.0",
     "vitest": "^1.3.1"
