--- a/osa8/graphql_library/package.json
+++ b/osa8/graphql_library/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.11.2",
+    "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
+    "mongoose": "^7.8.2",
+    "mongoose-unique-validator": "^4.0.1",
     "nodemon": "^3.1.7"
   }
 }
